tests/errors/parsing/007_missing_type_specifier.c
int main(void) {
    volatile a;
}