tests/errors/parsing/007_missing_type_specifier.c.expect
./tests/errors/parsing/007_missing_type_specifier.c:2:14: error: missing type specifier
1 | int main(void) {
2 |     volatile a;
                 ^
3 | }
